[package]
name = "vogs-collateral"
version = "0.1.0"
edition = "2024"
description = "RWA-backed collateral positions and credit lines"

[lib]
crate-type = ["cdylib", "lib"]
name = "vogs_collateral"

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
spl-token-2022 = { workspace = true }

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
