[package]
name = "vogs-hook"
version = "0.1.0"
edition = "2024"
description = "Transfer Hook program for KYC-enforced token transfers"

[lib]
crate-type = ["cdylib", "lib"]
name = "vogs_hook"

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
spl-token-2022 = { workspace = true }
spl-transfer-hook-interface = { workspace = true }
spl-tlv-account-resolution = { workspace = true }

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
